<resources>
    <string name="app_name">App Portifolio</string>
    <string name="app_title">My nanodegree Apps!</string>
    <string name="app_button_movies">POPULAR MOVIES</string>
    <string name="app_button_stack">STOCK HAWK</string>
    <string name="app_button_build">BUILD IT BIGGER</string>
    <string name="app_button_material">MAKE YOUR APP MATERIAL</string>
    <string name="app_button_ubiquitous">GO UBIQUITOUS</string>
    <string name="app_button_capstone">CAPSTONE</string>
    <string name="app_button_info">This button will launch my %1$s app!</string>
</resources>
